# DiskANN

./: .bazelrc  .clang-format  .codecov.yml  .gitattributes  .gitignore  .gitmodules  AGENTS.md  BUILD  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Cargo.toml  CompilerOptions.cmake  DiskANN-Project-and-Research-Overview.md  Dockerfile  Dockerfile.rhel8  DockerfileDev  LICENSE  MANIFEST.in  README-changed.md  README.md  README_LINUX.md  README_WIN.md  RELEASING.md  RESULTS.md  TODO  WORKSPACE  _clang-format  agents.md  analyze_ivf_lists.py  benchmark_results.txt  bigann.json  bloom.ipynb  build.sh  clang-format.cmake  clippy.toml  convert_f16_f32.py  copilot.txt  cscope.files  cscope.in.out  (+34 more)
DiskAnnPy/: Cargo.toml  README.md  pyproject.toml
DiskAnnPy/src/: async_memory_index.rs  bftree_index.rs  build_async_memory_index.rs  build_bftree_index.rs  build_disk_index.rs  lib.rs  static_disk_index.rs
DiskAnnPy/tests/: test_async_index.py  test_bftree_index.py  test_builder.py  test_quantization.py  test_static_disk_index.py
apps/: CMakeLists.txt  bench_graph_compress.cpp  benchmark_reads.cpp  benchmark_reads_single_threaded.cpp  build_disk_index.cpp  build_dynamic_index.cpp  build_memory_index.cpp  build_rabitq_reorder_codes.cpp  build_stitched_index.cpp  build_subgraph_index.cpp  delete.cpp  delete_and_reinsert_from_dynamic_index.cpp  delete_from_dynamic_index.cpp  delete_insert.cpp  insert.cpp  interactive_search_memory_index.cpp  lsh_util.cpp  merge_subgraph_index.cpp  program_options_utils.hpp  range_search_disk_index.cpp  search_disk_index.cpp  search_memory_index.cpp  simple_test.cpp  split_subgraph_index.cpp  test_insert_deletes_consolidate.cpp  test_open_blas.cpp  test_streaming_scenario.cpp
apps/restapi/: CMakeLists.txt  inmem_server.cpp  multiple_ssdindex_server.cpp  ssd_server.cpp
apps/utils/: CMakeLists.txt  EsentDemo.cpp  EsentDemo.h  EsentDemoCompressItems.cpp  EsentDemoCompressQueries.cpp  EsentDemoCreateSchema.cpp  EsentDemoGeneratePivot.cpp  EsentDemoLoadItems.cpp  bin_to_fvecs.cpp  bin_to_tsv.cpp  bitmap_vs_list.cpp  calculate_recall.cpp  compute_diverse_groundtruth.cpp  compute_filtered_groundtruth.cpp  compute_groundtruth.cpp  compute_groundtruth_for_filters.cpp  count_bfs_levels.cpp  create_disk_layout.cpp  float_bin_to_int8.cpp  fvecs_to_bin.cpp  fvecs_to_bvecs.cpp  gen_random_slice.cpp  generate_pq.cpp  generate_pq_variable_chunks.cpp  generate_synthetic_labels.cpp  generate_test_data.cpp  get_false_positive_rate.cpp  int8_to_float.cpp  int8_to_float_scale.cpp  ivecs_to_bin.cpp  merge_shards.cpp  partition_data.cpp  partition_with_ram_budget.cpp  rand_data_gen.cpp  simulate_aggregate_recall.cpp  stats_label_data.cpp  tsv_to_bin.cpp  uint32_to_uint8.cpp  uint8_to_float.cpp  vector_analysis.cpp
diskann-benchmark/: Cargo.toml  README.md  clippy.ps1  clippy.sh  multiple_filter_test_report.md
diskann-benchmark-core/: Cargo.toml
diskann-benchmark-core/src/: lib.rs  recall.rs  tokio.rs  utils.rs
diskann-benchmark-multi-vector/: Cargo.toml  README.md
diskann-benchmark-multi-vector/examples/: multi-vector.json  test.json
diskann-benchmark-multi-vector/src/: bin.rs  lib.rs
diskann-benchmark-runner/: Cargo.toml
diskann-benchmark-runner-derive/: Cargo.toml
diskann-benchmark-runner-derive/src/: lib.rs
diskann-benchmark-runner/dev/: main.rs
diskann-benchmark-runner/src/: any.rs  app.rs  benchmark.rs  checker.rs  features.rs  files.rs  fixture.rs  input.rs  jobs.rs  lib.rs  output.rs  reflect.rs  registry.rs  result.rs  schema.rs  test.rs  ux.rs
diskann-benchmark-simd/: Cargo.toml
diskann-benchmark-simd/examples/: simd-scalar.json  simd.json  test-aarch64.json  test.json  test_scalar.json  tolerance.json
diskann-benchmark-simd/src/: bin.rs  lib.rs
diskann-benchmark/example/: async-determinant-diversity-defaults.json  async-determinant-diversity-eta1.json  async-determinant-diversity-none.json  async-determinant-diversity.json  async-diverse-search.json  async-dynamic.json  async-filter-ground-truth-small.json  async-filter-ground-truth.json  async-filter.json  async-multi-attribute-diversity.json  async-multihop-filter-ground-truth-small.json  async-multihop-high-selectivity-small.json  async-no-filter-ground-truth.json  async-range.json  async-two-queue-filter-ground-truth-small.json  async.json  caselaw-bitmap-high.json  caselaw-bitmap-inline-adaptive-high.json  caselaw-bitmap-inline-adaptive-low.json  caselaw-bitmap-inline-adaptive-med.json  caselaw-bitmap-inline-high.json  caselaw-bitmap-inline-low.json  caselaw-bitmap-inline-med.json  caselaw-bitmap-low.json  caselaw-bitmap-med.json  caselaw-filter-high.json  caselaw-filter-low.json  caselaw-filter-med.json  caselaw-inline-adaptive-high.json  caselaw-inline-adaptive-low.json  caselaw-inline-adaptive-med.json  caselaw-inline-high.json  caselaw-inline-low.json  caselaw-inline-med.json  disk-index-determinant-diversity.json  disk-index-filter.json  disk-index.json  document-filter.json  flat-index.json  graph-index-bftree-spherical-stream.json  (+74 more)
diskann-benchmark/mine/: caselaw-10M-build.json
diskann-bftree/: .clippy.toml  Cargo.toml
diskann-bftree/src/: id.rs  (+6 more)
diskann-disk/: Cargo.toml  README.md
diskann-garnet/: Cargo.toml  README.md  diskann-garnet.nuspec
diskann-graphivf/: Cargo.toml  INVESTIGATION_RESULTS.md  PERFORMANCE.md
diskann-inmem/: Cargo.toml  DEV.md
diskann-label-filter/: Cargo.toml  README.md  inverted_index_architecture_design.md
diskann-linalg/: Cargo.toml  build.rs
diskann-mv-rerank-benchmark/: Cargo.toml  README.md
diskann-pipnn/: Cargo.toml  README.md  build.rs
diskann-platform/: Cargo.toml
diskann-provider-core/: Cargo.toml
diskann-providers/: Cargo.toml  rand_labels_50_10K_one_per_point.txt  rand_labels_50_10K_random.txt  rand_labels_50_10K_zipf.txt
diskann-quantization/: .gitignore  Cargo.toml  README.md  build.rs  clippy.sh
diskann-record/: Cargo.toml  HANDOFF.md  README.md  metadata.json
diskann-storage/: Cargo.toml
diskann-tools/: AUTOTUNER.md  Cargo.toml
diskann-utils/: Cargo.toml  README.md
diskann-vector/: Cargo.toml
(+2638 files in other folders)
