# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT license.

[workspace]
members = [
    # Base and Numerics
    "diskann-wide",
    "diskann-vector",
    "diskann-linalg",
    "diskann-utils",
    "diskann-quantization",
    "diskann-platform",
    # Algorithm
    "diskann",
    # Providers
    "diskann-providers",
    "diskann-disk",
    "diskann-label-filter",
    # Infrastructure
    "diskann-benchmark-runner",
    "diskann-benchmark-simd",
    "diskann-benchmark",
    "diskann-tools",
]

default-members = [
    "diskann-wide",
    "diskann-vector",
    "diskann-quantization",
    "diskann-utils",
    "diskann",
]
resolver = "3"

[workspace.package]
version = "0.41.0"      # Obeying semver
description = "DiskANN is a fast approximate nearest neighbor search library for high dimensional data"
authors = ["Microsoft"]
documentation = "https://github.com/microsoft/DiskANN"
license = "MIT"
edition = "2021"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"

[workspace.dependencies]
# Base And Numerics
diskann-wide = { path = "diskann-wide", version = "0.41.0" }
diskann-vector = { path = "diskann-vector", version = "0.41.0" }
diskann-linalg = { path = "diskann-linalg", version = "0.41.0" }
diskann-utils = { path = "diskann-utils", default-features = false, version = "0.41.0" }
diskann-quantization = { path = "diskann-quantization", default-features = false, version = "0.41.0" }
diskann-platform = { path = "diskann-platform", version = "0.41.0" }
# Algorithm
diskann = { path = "diskann", version = "0.41.0" }
# Providers
diskann-providers = { path = "diskann-providers", default-features = false, version = "0.41.0" }
diskann-disk = { path = "diskann-disk", version = "0.41.0" }
diskann-label-filter = { path = "diskann-label-filter", version = "0.41.0" }
# Infra
diskann-benchmark-runner = { path = "diskann-benchmark-runner", version = "0.41.0" }
diskann-tools = { path = "diskann-tools", version = "0.41.0" }

# platform = { path = "platform", version = "0.39.2" }
# diskann-core = { path = "diskann-core", version = "0.39.2" }
# diskann = { path = "diskann", version = "0.39.2" }
# disk-index = { path = "disk-index", version = "0.39.2" }
# protos = { path = "protos", version = "0.39.2" }
# label-filter = { path = "label-filter", version = "0.39.2" }

# External dependencies (shared versions)
anyhow = "1.0.98"
approx = "0.5.1"
arc-swap = "1.7.1"
bf-tree = "=0.4.5"
bincode = "1.3.3"
bit-set = "0.8.0"
bytemuck = "1.23.0"
byteorder = "1.5.0"
cbindgen = "0.28.0"
cfg-if = "1.0.0"
clap = "4.5.45"
criterion = "0.5.1"
csv = "1.3.1"
futures-util = { version = "0.3.31", default-features = false }
half = "2.6.0"
hashbrown = "0.16.0"
iai-callgrind = "0.14.0"
itertools = "0.13.0"
num-traits = "0.2.15"
num_cpus = "1.16.0"
once_cell = "1.19.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
paste = "1.0.15"
pin-project = "1.1.8"
proptest = "1.6.0"
rand = "0.9.2"
rand_distr = "0.5"
rayon = "1.10.0"
roaring = "0.11.2"
rstest = "0.23.0"
serde = "1.0.228"
serde_json = "1.0.142"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = "1.48.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
vfs = "0.12.1"

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
split-debuginfo = "packed"

[profile.ci]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
