[package]
name = "diskann-benchmark-runner"
version.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
half = { workspace = true }
indicatif = "0.18.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []

# Enable building the test executable.
test-app = []

# Expose internal utilities for performing UX error message normalization.
ux-tools = []

[[bin]]
name = "dev"
path = "dev/main.rs"
required-features = ["test-app"]
