# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
[package]
name = "diskann-bftree"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bf-tree.workspace = true
bytemuck = { workspace = true, features = ["must_cast"] }
diskann.workspace = true
diskann-providers.workspace = true
diskann-quantization = { workspace = true, features = ["flatbuffers"] }
diskann-utils.workspace = true
diskann-vector.workspace = true
half = { workspace = true, features = ["bytemuck", "num-traits"] }
futures-util.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
diskann = { workspace = true, features = ["testing"] }
diskann-providers = { workspace = true, features = ["testing"] }
diskann-utils = { workspace = true, features = ["testing"] }
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }

[features]
default = []
experimental_diversity_search = ["diskann/experimental_diversity_search"]

[lints.clippy]
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
disallowed_methods = "warn"


