[package]
name = "diskann-garnet"
version = "1.0.26"
edition = "2024"
authors.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck.workspace = true
crossbeam = "0.8.4"
dashmap = { workspace = true, features = ["inline"] }
diskann.workspace = true
diskann-quantization.workspace = true
diskann-providers.workspace = true
diskann-utils.workspace = true
diskann-vector.workspace = true
foldhash = "0.2.0"
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
