[package]
name = "diskann-inmem"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { workspace = true, features = ["must_cast"] }
crossbeam-queue = "0.3.12"
diskann = { workspace = true }
diskann-utils = { workspace = true, default-features = false }
diskann-vector.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
